--- a/services.html
+++ b/services.html
@@ -20,7 +20,7 @@
   <header class="site-header">
     <nav class="nav-container">
       <a href="index.html" class="logo">
-        <span class="logo-mark" aria-hidden="true">EI</span>
+        <span class="logo-mark" aria-hidden="true"><img src="assets/exceptional-logo-gold.svg" alt=""></span>
         <span class="logo-divider" aria-hidden="true"></span>
         <span class="logo-text"><span class="logo-text-top">Exceptional</span><span class="logo-text-bottom">Investing</span></span>
       </a>
@@ -209,7 +209,7 @@
       <div class="footer-top">
         <div class="footer-brand">
           <a href="index.html" class="footer-logo">
-            <span class="logo-mark" aria-hidden="true">EI</span>
+            <span class="logo-mark" aria-hidden="true"><img src="assets/exceptional-logo-gold.svg" alt=""></span>
         <span class="logo-divider" aria-hidden="true"></span>
         <span class="logo-text"><span class="logo-text-top">Exceptional</span><span class="logo-text-bottom">Investing</span></span>
           </a>
