--- a/contact.html
+++ b/contact.html
@@ -58,25 +58,25 @@
         <div class="contact-form-wrapper">
           <h2 class="contact-form-heading">Schedule a Consultation</h2>
           <p class="contact-form-subtext">Fill out the form below and a member of our team will reach out within one business day to schedule your confidential consultation.</p>
-          <form class="contact-form">
+          <form class="contact-form" id="contact-form" novalidate>
             <div class="form-row">
               <div class="form-group">
                 <label for="first-name">First Name</label>
-                <input type="text" id="first-name" name="first-name" required>
+                <input type="text" id="first-name" name="first-name" required autocomplete="given-name">
               </div>
               <div class="form-group">
                 <label for="last-name">Last Name</label>
-                <input type="text" id="last-name" name="last-name" required>
+                <input type="text" id="last-name" name="last-name" required autocomplete="family-name">
               </div>
             </div>
             <div class="form-row">
               <div class="form-group">
                 <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email" required autocomplete="email">
               </div>
               <div class="form-group">
                 <label for="phone">Phone</label>
-                <input type="tel" id="phone" name="phone">
+                <input type="tel" id="phone" name="phone" autocomplete="tel">
               </div>
             </div>
             <div class="form-group">
@@ -113,7 +113,12 @@
                 <option value="other">Other</option>
               </select>
             </div>
+            <div class="form-group honeypot-field" aria-hidden="true">
+              <label for="website">Website</label>
+              <input type="text" id="website" name="website" tabindex="-1" autocomplete="off">
+            </div>
             <button type="submit" class="btn btn-primary btn-lg contact-submit">Send Message</button>
+            <p class="contact-form-status" id="contact-form-status" role="status" aria-live="polite"></p>
             <p class="form-disclaimer">Your information is confidential and will never be shared with third parties. By submitting this form, you are not entering into an advisory agreement.</p>
           </form>
         </div>
@@ -139,7 +144,7 @@
               </svg>
               <div>
                 <p class="info-label">Email</p>
-                <a href="mailto:athletes@exceptionalinvesting.com">athletes@exceptionalinvesting.com</a>
+                <a href="mailto:information@cwcgroup.com">information@cwcgroup.com</a>
               </div>
             </div>
           </div>
