Changed name to Exceptional Wealth Group

--- a/faq.html
+++ b/faq.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FAQ | Exceptional Investing — Wealth Management for Athletes</title>
-  <meta name="description" content="Common questions about athlete wealth management, multi-state taxes, fiduciary advisors, NIL planning, and working with Exceptional Investing. Get answers here.">
+  <title>FAQ | Exceptional Wealth Group — Wealth Management for Athletes</title>
+  <meta name="description" content="Common questions about athlete wealth management, multi-state taxes, fiduciary advisors, NIL planning, and working with Exceptional Wealth Group. Get answers here.">
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
       <a href="index.html" class="logo">
         <span class="logo-mark" aria-hidden="true"><img src="assets/exceptional-logo-gold.svg" alt=""></span>
         <span class="logo-divider" aria-hidden="true"></span>
-        <span class="logo-text"><span class="logo-text-top">Exceptional</span><span class="logo-text-bottom">Investing</span></span>
+        <span class="logo-text"><span class="logo-text-top">Exceptional</span><span class="logo-text-bottom">Wealth Group</span></span>
       </a>
       <ul class="nav-links">
         <li><a href="services.html">Services</a></li>
@@ -57,7 +57,7 @@
         <div class="faq-topic-select-wrap">
           <select id="faq-topic-select" class="faq-topic-select" aria-label="Jump to FAQ topic">
             <option value="">Select a topic</option>
-            <option value="faq-working-with-us">Working With Exceptional Investing</option>
+            <option value="faq-working-with-us">Working With Exceptional Wealth Group</option>
             <option value="faq-taxes-planning">Taxes &amp; Financial Planning</option>
             <option value="faq-investments-risk">Investments &amp; Risk</option>
           </select>
@@ -66,7 +66,7 @@
 
       <!-- FAQ Category: Working With Us -->
       <div class="faq-category" id="faq-working-with-us">
-        <h2 class="faq-category-title">Working With Exceptional Investing</h2>
+        <h2 class="faq-category-title">Working With Exceptional Wealth Group</h2>
 
         <div class="faq-item">
           <h3 class="faq-question">What makes athlete wealth management different from regular wealth management?</h3>
@@ -108,7 +108,7 @@
         </div>
 
         <div class="faq-item">
-          <h3 class="faq-question">What is the minimum to work with Exceptional Investing?</h3>
+          <h3 class="faq-question">What is the minimum to work with Exceptional Wealth Group?</h3>
           <div class="faq-answer">
             <p>We work with athletes at various stages of their careers and don't publish a strict asset minimum. If you're a professional athlete — whether you're a first-round pick or a practice squad player — we're happy to have a conversation about how we can help. Our goal is to build relationships that last an entire career and beyond.</p>
           </div>
@@ -202,7 +202,7 @@
           <a href="index.html" class="footer-logo">
             <span class="logo-mark" aria-hidden="true"><img src="assets/exceptional-logo-gold.svg" alt=""></span>
         <span class="logo-divider" aria-hidden="true"></span>
-        <span class="logo-text"><span class="logo-text-top">Exceptional</span><span class="logo-text-bottom">Investing</span></span>
+        <span class="logo-text"><span class="logo-text-top">Exceptional</span><span class="logo-text-bottom">Wealth Group</span></span>
           </a>
           <p class="footer-tagline">Portland's premier wealth management firm dedicated to professional athletes.</p>
           <div class="footer-newsletter">
@@ -248,7 +248,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p class="footer-legal">&copy; 2026 Exceptional Investing. All rights reserved. Investment advisory services provided through CWC Advisors, LLC, an SEC-registered investment advisor. Past performance is not indicative of future results.</p>
+        <p class="footer-legal">&copy; 2026 Exceptional Wealth Group. All rights reserved. Investment advisory services provided through CWC Advisors, LLC, an SEC-registered investment advisor. Past performance is not indicative of future results.</p>
         <div class="footer-social">
           <a href="#" aria-label="LinkedIn"><svg viewBox="0 0 24 24" fill="currentColor" width="20" height="20"><path d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z"/></svg></a>
           <a href="#" aria-label="Twitter/X"><svg viewBox="0 0 24 24" fill="currentColor" width="20" height="20"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg></a>
