--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exceptional Investing | Wealth Management for Athletes</title>
+  <title>Exceptional Wealth Group | Wealth Management for Athletes</title>
   <meta name="description" content="Portland's premier wealth management firm dedicated to professional athletes. Navigate your unique financial journey with expert guidance from NIL through retirement.">
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +22,7 @@
       <a href="index.html" class="logo">
         <span class="logo-mark" aria-hidden="true"><img src="assets/exceptional-logo-gold.svg" alt=""></span>
         <span class="logo-divider" aria-hidden="true"></span>
-        <span class="logo-text"><span class="logo-text-top">Exceptional</span><span class="logo-text-bottom">Investing</span></span>
+        <span class="logo-text"><span class="logo-text-top">Exceptional</span><span class="logo-text-bottom">Wealth Group</span></span>
       </a>
       <ul class="nav-links">
         <li><a href="services.html">Services</a></li>
@@ -306,7 +306,7 @@
           <a href="index.html" class="footer-logo">
             <span class="logo-mark" aria-hidden="true"><img src="assets/exceptional-logo-gold.svg" alt=""></span>
         <span class="logo-divider" aria-hidden="true"></span>
-        <span class="logo-text"><span class="logo-text-top">Exceptional</span><span class="logo-text-bottom">Investing</span></span>
+        <span class="logo-text"><span class="logo-text-top">Exceptional</span><span class="logo-text-bottom">Wealth Group</span></span>
           </a>
           <p class="footer-tagline">Portland's premier wealth management firm dedicated to professional athletes.</p>
           <div class="footer-newsletter">
@@ -352,7 +352,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p class="footer-legal">&copy; 2026 Exceptional Investing. All rights reserved. Investment advisory services provided through CWC Advisors, LLC, an SEC-registered investment advisor. Past performance is not indicative of future results.</p>
+        <p class="footer-legal">&copy; 2026 Exceptional Wealth Group. All rights reserved. Investment advisory services provided through CWC Advisors, LLC, an SEC-registered investment advisor. Past performance is not indicative of future results.</p>
         <div class="footer-social">
           <a href="#" aria-label="LinkedIn">
             <svg viewBox="0 0 24 24" fill="currentColor" width="20" height="20">
