--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us | Exceptional Investing — Wealth Management for Athletes</title>
-  <meta name="description" content="Meet the team behind Exceptional Investing. Portland-based wealth advisors with decades of investment experience, dedicated to serving professional athletes.">
+  <title>About Us | Exceptional Wealth Group — Wealth Management for Athletes</title>
+  <meta name="description" content="Meet the team behind Exceptional Wealth Group. Portland-based wealth advisors with decades of investment experience, dedicated to serving professional athletes.">
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
       <a href="index.html" class="logo">
         <span class="logo-mark" aria-hidden="true"><img src="assets/exceptional-logo-gold.svg" alt=""></span>
         <span class="logo-divider" aria-hidden="true"></span>
-        <span class="logo-text"><span class="logo-text-top">Exceptional</span><span class="logo-text-bottom">Investing</span></span>
+        <span class="logo-text"><span class="logo-text-top">Exceptional</span><span class="logo-text-bottom">Wealth Group</span></span>
       </a>
       <ul class="nav-links">
         <li><a href="services.html">Services</a></li>
@@ -45,7 +45,7 @@
     <div class="section-container">
       <p class="section-eyebrow">Who We Are</p>
       <h1 class="page-hero-title">Built in Portland.<br>Built for Athletes.</h1>
-      <p class="page-hero-subtitle">Exceptional Investing was created with a singular focus: to give professional athletes the kind of dedicated, conflict-free wealth management that their careers and families deserve.</p>
+      <p class="page-hero-subtitle">Exceptional Wealth Group was created with a singular focus: to give professional athletes the kind of dedicated, conflict-free wealth management that their careers and families deserve.</p>
     </div>
   </section>
 
@@ -55,9 +55,9 @@
       <div class="story-grid">
         <div class="story-content">
           <h2 class="story-heading">Our Story</h2>
-          <p>Exceptional Investing is the athlete-dedicated wealth management practice of CWC Advisors, LLC — a Portland-area investment advisory firm with over two decades of experience managing portfolios for individuals, families, and institutions.</p>
+          <p>Exceptional Wealth Group is the athlete-dedicated wealth management practice of CWC Advisors, LLC — a Portland-area investment advisory firm with over two decades of experience managing portfolios for individuals, families, and institutions.</p>
           <p>CWC was founded in 2000 with a disciplined, research-driven investment philosophy. Over the years, the team's track record attracted not only high-net-worth individuals but institutional investors as well. That same rigor — the same commitment to identifying real value and managing risk with precision — now powers every strategy we build for professional athletes.</p>
-          <p>We launched Exceptional Investing because we saw a gap. Too many athletes are served by massive wirehouses that treat sports and entertainment as a marketing category, not a specialty. Too many are sold products instead of given advice. And too many face financial hardship after retirement — not because they didn't earn enough, but because nobody built them a real plan.</p>
+          <p>We launched Exceptional Wealth Group because we saw a gap. Too many athletes are served by massive wirehouses that treat sports and entertainment as a marketing category, not a specialty. Too many are sold products instead of given advice. And too many face financial hardship after retirement — not because they didn't earn enough, but because nobody built them a real plan.</p>
           <p>We're here to change that. From our home in the Pacific Northwest, we serve athletes across the country with the personal attention of a boutique firm and the investment expertise of a team that's been doing this for over 25 years.</p>
         </div>
         <div class="story-visual">
@@ -149,7 +149,7 @@
       <div class="section-header">
         <p class="section-eyebrow">Our Team</p>
         <h2 class="section-title">The People Behind Your Plan</h2>
-        <p class="section-subtitle">Our team combines deep investment expertise with a genuine understanding of the athlete experience. When you work with Exceptional Investing, you're backed by professionals who have spent decades in the markets.</p>
+        <p class="section-subtitle">Our team combines deep investment expertise with a genuine understanding of the athlete experience. When you work with Exceptional Wealth Group, you're backed by professionals who have spent decades in the markets.</p>
       </div>
       <div class="team-grid">
 
@@ -207,7 +207,7 @@
           </div>
           <h3 class="team-name">Aubrey Cleland</h3>
           <p class="team-role">Marketing &amp; Communications</p>
-          <p class="team-bio">Leads client communication and brand strategy for the firm. Brings expertise in digital marketing and social media presence, helping athletes and prospects connect with the Exceptional Investing mission and resources.</p>
+          <p class="team-bio">Leads client communication and brand strategy for the firm. Brings expertise in digital marketing and social media presence, helping athletes and prospects connect with the Exceptional Wealth Group mission and resources.</p>
           <p class="team-credentials">Chapman University, Communications</p>
         </div>
 
@@ -254,7 +254,7 @@
           <a href="index.html" class="footer-logo">
             <span class="logo-mark" aria-hidden="true"><img src="assets/exceptional-logo-gold.svg" alt=""></span>
         <span class="logo-divider" aria-hidden="true"></span>
-        <span class="logo-text"><span class="logo-text-top">Exceptional</span><span class="logo-text-bottom">Investing</span></span>
+        <span class="logo-text"><span class="logo-text-top">Exceptional</span><span class="logo-text-bottom">Wealth Group</span></span>
           </a>
           <p class="footer-tagline">Portland's premier wealth management firm dedicated to professional athletes.</p>
           <div class="footer-newsletter">
@@ -300,7 +300,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p class="footer-legal">&copy; 2026 Exceptional Investing. All rights reserved. Investment advisory services provided through CWC Advisors, LLC, an SEC-registered investment advisor. Past performance is not indicative of future results.</p>
+        <p class="footer-legal">&copy; 2026 Exceptional Wealth Group. All rights reserved. Investment advisory services provided through CWC Advisors, LLC, an SEC-registered investment advisor. Past performance is not indicative of future results.</p>
         <div class="footer-social">
           <a href="#" aria-label="LinkedIn"><svg viewBox="0 0 24 24" fill="currentColor" width="20" height="20"><path d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z"/></svg></a>
           <a href="#" aria-label="Twitter/X"><svg viewBox="0 0 24 24" fill="currentColor" width="20" height="20"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg></a>
