--- a/approach.html
+++ b/approach.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Our Approach | Exceptional Investing — Wealth Management for Athletes</title>
+  <title>Our Approach | Exceptional Wealth Group — Wealth Management for Athletes</title>
   <meta name="description" content="A disciplined, research-driven investment philosophy tailored to the unique financial realities of professional athletes. Discover how we build and protect generational wealth.">
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +22,7 @@
       <a href="index.html" class="logo">
         <span class="logo-mark" aria-hidden="true"><img src="assets/exceptional-logo-gold.svg" alt=""></span>
         <span class="logo-divider" aria-hidden="true"></span>
-        <span class="logo-text"><span class="logo-text-top">Exceptional</span><span class="logo-text-bottom">Investing</span></span>
+        <span class="logo-text"><span class="logo-text-top">Exceptional</span><span class="logo-text-bottom">Wealth Group</span></span>
       </a>
       <ul class="nav-links">
         <li><a href="services.html">Services</a></li>
@@ -175,7 +175,7 @@
       <div class="section-header">
         <p class="section-eyebrow">The Process</p>
         <h2 class="section-title">How We Work Together</h2>
-        <p class="section-subtitle">Getting started is straightforward. Here's what to expect when you partner with Exceptional Investing.</p>
+        <p class="section-subtitle">Getting started is straightforward. Here's what to expect when you partner with Exceptional Wealth Group.</p>
       </div>
 
       <div class="process-steps">
@@ -258,7 +258,7 @@
           <a href="index.html" class="footer-logo">
             <span class="logo-mark" aria-hidden="true"><img src="assets/exceptional-logo-gold.svg" alt=""></span>
         <span class="logo-divider" aria-hidden="true"></span>
-        <span class="logo-text"><span class="logo-text-top">Exceptional</span><span class="logo-text-bottom">Investing</span></span>
+        <span class="logo-text"><span class="logo-text-top">Exceptional</span><span class="logo-text-bottom">Wealth Group</span></span>
           </a>
           <p class="footer-tagline">Portland's premier wealth management firm dedicated to professional athletes.</p>
           <div class="footer-newsletter">
@@ -304,7 +304,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p class="footer-legal">&copy; 2026 Exceptional Investing. All rights reserved. Investment advisory services provided through CWC Advisors, LLC, an SEC-registered investment advisor. Past performance is not indicative of future results.</p>
+        <p class="footer-legal">&copy; 2026 Exceptional Wealth Group. All rights reserved. Investment advisory services provided through CWC Advisors, LLC, an SEC-registered investment advisor. Past performance is not indicative of future results.</p>
         <div class="footer-social">
           <a href="#" aria-label="LinkedIn"><svg viewBox="0 0 24 24" fill="currentColor" width="20" height="20"><path d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z"/></svg></a>
           <a href="#" aria-label="Twitter/X"><svg viewBox="0 0 24 24" fill="currentColor" width="20" height="20"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg></a>
