--- a/approach.html
+++ b/approach.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Our Approach | Exceptional Wealth Group — Wealth Management for Athletes</title>
   <meta name="description" content="A disciplined, research-driven investment philosophy tailored to the unique financial realities of professional athletes. Discover how we build and protect generational wealth.">
+  <link rel="icon" type="image/svg+xml" href="assets/favicon-logo-gold.svg?v=2">
+  <link rel="shortcut icon" href="assets/favicon-logo-gold.svg?v=2">
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
