--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact Us | Exceptional Wealth Group — Wealth Management for Athletes</title>
   <meta name="description" content="Schedule a confidential consultation with Exceptional Wealth Group. Portland-based wealth management built for professional athletes. Call, email, or visit us.">
+  <link rel="icon" type="image/svg+xml" href="assets/favicon-logo-gold.svg?v=2">
+  <link rel="shortcut icon" href="assets/favicon-logo-gold.svg?v=2">
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
