--- a/faq.html
+++ b/faq.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FAQ | Exceptional Wealth Group — Wealth Management for Athletes</title>
   <meta name="description" content="Common questions about athlete wealth management, multi-state taxes, fiduciary advisors, NIL planning, and working with Exceptional Wealth Group. Get answers here.">
+  <link rel="icon" type="image/svg+xml" href="assets/favicon-logo-gold.svg?v=2">
+  <link rel="shortcut icon" href="assets/favicon-logo-gold.svg?v=2">
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
