--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Exceptional Wealth Group | Wealth Management for Athletes</title>
   <meta name="description" content="Portland's premier wealth management firm dedicated to professional athletes. Navigate your unique financial journey with expert guidance from NIL through retirement.">
+  <link rel="icon" type="image/svg+xml" href="assets/favicon-logo-gold.svg?v=2">
+  <link rel="shortcut icon" href="assets/favicon-logo-gold.svg?v=2">
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
