--- a/services.html
+++ b/services.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Services | Exceptional Wealth Group — Wealth Management for Athletes</title>
   <meta name="description" content="Comprehensive wealth management services built for professional athletes. From multi-state tax planning to estate strategy, we cover every angle of your financial life.">
+  <link rel="icon" type="image/svg+xml" href="assets/favicon-logo-gold.svg?v=2">
+  <link rel="shortcut icon" href="assets/favicon-logo-gold.svg?v=2">
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
