Created education page and made changes to visuals on other pages. Improved js on some pages.

--- a/approach.html
+++ b/approach.html
@@ -28,6 +28,7 @@
       </a>
       <ul class="nav-links">
         <li><a href="services.html">Services</a></li>
+        <li><a href="athlete-education.html">Athlete Education</a></li>
         <li><a href="approach.html">Our Approach</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="faq.html">FAQ</a></li>
@@ -67,47 +68,6 @@
           <div class="story-image-placeholder">
             <span>Athlete Challenge Visual</span>
           </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- ========== INVESTMENT PHILOSOPHY ========== -->
-  <section id="investment-philosophy" class="philosophy-section">
-    <div class="section-container">
-      <div class="section-header">
-        <p class="section-eyebrow">Investment Philosophy</p>
-        <h2 class="section-title">How We Invest Your Money</h2>
-        <p class="section-subtitle">Our investment approach is grounded in a principle we've followed for over two decades: markets misprice assets, and disciplined investors can capitalize on that.</p>
-      </div>
-
-      <div class="philosophy-pillars">
-        <div class="pillar-card">
-          <div class="pillar-number">01</div>
-          <h3 class="pillar-title">Value-Driven Selection</h3>
-          <p class="pillar-desc">Markets tend to push prices to extremes — both up and down. We identify assets whose prices don't reflect their true worth. When a company is priced as if it will never recover, or a growth stock is valued as if nothing could ever go wrong, those are opportunities.</p>
-          <p class="pillar-desc">Buying when expectations are low doesn't just create opportunity for gain — it naturally reduces risk. This disciplined, contrarian approach has guided our portfolio decisions for over 25 years.</p>
-        </div>
-
-        <div class="pillar-card">
-          <div class="pillar-number">02</div>
-          <h3 class="pillar-title">Diversified Portfolio Construction</h3>
-          <p class="pillar-desc">No single investment should make or break your financial future. We build diversified portfolios across asset classes — public equities, fixed income, real estate, and selectively, alternative investments — tailored to your specific timeline and risk tolerance.</p>
-          <p class="pillar-desc">For athletes, this means portfolios designed to weather the volatility of both markets and careers. Your portfolio should work for you whether you're in your peak earning years or twenty years into retirement.</p>
-        </div>
-
-        <div class="pillar-card">
-          <div class="pillar-number">03</div>
-          <h3 class="pillar-title">Tax-Efficient Execution</h3>
-          <p class="pillar-desc">For an athlete earning across multiple states, every basis point of tax efficiency matters. We integrate tax considerations into every investment decision — from asset location strategies to tax-loss harvesting to the timing of gains and distributions.</p>
-          <p class="pillar-desc">The goal isn't just strong returns — it's strong after-tax returns. That distinction can mean millions over the course of a career and retirement.</p>
-        </div>
-
-        <div class="pillar-card">
-          <div class="pillar-number">04</div>
-          <h3 class="pillar-title">Risk Management First</h3>
-          <p class="pillar-desc">We wrap our investment philosophy into a disciplined implementation process that actively monitors and controls macro risks. Markets will be volatile — your plan shouldn't be.</p>
-          <p class="pillar-desc">We stress-test portfolios against multiple economic scenarios, maintain appropriate liquidity buffers, and ensure you're never overexposed to a single position, sector, or outcome.</p>
         </div>
       </div>
     </div>
@@ -166,6 +126,47 @@
           </div>
           <h3>Sustain</h3>
           <p>Estate planning, generational wealth transfer, family governance, and philanthropy. Build a legacy that outlasts your career.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- ========== INVESTMENT PHILOSOPHY ========== -->
+  <section id="investment-philosophy" class="philosophy-section">
+    <div class="section-container">
+      <div class="section-header">
+        <p class="section-eyebrow">Investment Philosophy</p>
+        <h2 class="section-title">How We Invest Your Money</h2>
+        <p class="section-subtitle">Our investment approach is grounded in a principle we've followed for over two decades: markets misprice assets, and disciplined investors can capitalize on that.</p>
+      </div>
+
+      <div class="philosophy-pillars">
+        <div class="pillar-card">
+          <div class="pillar-number">01</div>
+          <h3 class="pillar-title">Value-Driven Selection</h3>
+          <p class="pillar-desc">Markets tend to push prices to extremes — both up and down. We identify assets whose prices don't reflect their true worth. When a company is priced as if it will never recover, or a growth stock is valued as if nothing could ever go wrong, those are opportunities.</p>
+          <p class="pillar-desc">Buying when expectations are low doesn't just create opportunity for gain — it naturally reduces risk. This disciplined, contrarian approach has guided our portfolio decisions for over 25 years.</p>
+        </div>
+
+        <div class="pillar-card">
+          <div class="pillar-number">02</div>
+          <h3 class="pillar-title">Diversified Portfolio Construction</h3>
+          <p class="pillar-desc">No single investment should make or break your financial future. We build diversified portfolios across asset classes — public equities, fixed income, real estate, and selectively, alternative investments — tailored to your specific timeline and risk tolerance.</p>
+          <p class="pillar-desc">For athletes, this means portfolios designed to weather the volatility of both markets and careers. Your portfolio should work for you whether you're in your peak earning years or twenty years into retirement.</p>
+        </div>
+
+        <div class="pillar-card">
+          <div class="pillar-number">03</div>
+          <h3 class="pillar-title">Tax-Efficient Execution</h3>
+          <p class="pillar-desc">For an athlete earning across multiple states, every basis point of tax efficiency matters. We integrate tax considerations into every investment decision — from asset location strategies to tax-loss harvesting to the timing of gains and distributions.</p>
+          <p class="pillar-desc">The goal isn't just strong returns — it's strong after-tax returns. That distinction can mean millions over the course of a career and retirement.</p>
+        </div>
+
+        <div class="pillar-card">
+          <div class="pillar-number">04</div>
+          <h3 class="pillar-title">Risk Management First</h3>
+          <p class="pillar-desc">We wrap our investment philosophy into a disciplined implementation process that actively monitors and controls macro risks. Markets will be volatile — your plan shouldn't be.</p>
+          <p class="pillar-desc">We stress-test portfolios against multiple economic scenarios, maintain appropriate liquidity buffers, and ensure you're never overexposed to a single position, sector, or outcome.</p>
         </div>
       </div>
     </div>
@@ -299,6 +300,7 @@
               <li><a href="approach.html#investment-philosophy">How We Invest</a></li>
               <li><a href="services.html#career-transition">Career Transition</a></li>
               <li><a href="services.html#financial-education">Financial Literacy</a></li>
+              <li><a href="athlete-education.html">Athlete Education</a></li>
               <li><a href="faq.html">Common Questions</a></li>
               <li><a href="contact.html">Schedule a Call</a></li>
             </ul>
