--- a/faq.html
+++ b/faq.html
@@ -28,6 +28,7 @@
       </a>
       <ul class="nav-links">
         <li><a href="services.html">Services</a></li>
+        <li><a href="athlete-education.html">Athlete Education</a></li>
         <li><a href="approach.html">Our Approach</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="faq.html">FAQ</a></li>
@@ -243,6 +244,7 @@
               <li><a href="approach.html#investment-philosophy">How We Invest</a></li>
               <li><a href="services.html#career-transition">Career Transition</a></li>
               <li><a href="services.html#financial-education">Financial Literacy</a></li>
+              <li><a href="athlete-education.html">Athlete Education</a></li>
               <li><a href="faq.html">Common Questions</a></li>
               <li><a href="contact.html">Schedule a Call</a></li>
             </ul>
