--- a/services.html
+++ b/services.html
@@ -28,6 +28,7 @@
       </a>
       <ul class="nav-links">
         <li><a href="services.html">Services</a></li>
+        <li><a href="athlete-education.html">Athlete Education</a></li>
         <li><a href="approach.html">Our Approach</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="faq.html">FAQ</a></li>
@@ -66,129 +67,161 @@
       <div class="services-detail-grid">
         <!-- Service 1: Investment Management -->
         <article class="service-detail" id="investment-management">
-          <div class="service-detail-content">
-            <div class="service-detail-number">01</div>
-            <h2 class="service-detail-title">Investment Management</h2>
-            <p class="service-detail-desc">Your earning window may be short, but your investment horizon extends decades beyond the final whistle. We build diversified portfolios grounded in disciplined, research-driven analysis — identifying opportunities where the market has mispriced value and positioning your capital for long-term, sustainable growth.</p>
-            <ul class="service-detail-list">
-              <li>Customized portfolio construction based on your career timeline and risk profile</li>
-              <li>Value-oriented approach focused on long-term wealth creation</li>
-              <li>Access to alternative investments including private equity and real estate</li>
-              <li>Regular portfolio reviews aligned to your season and career milestones</li>
-            </ul>
-          </div>
+          <div class="service-detail-number">01</div>
+          <h2 class="service-detail-title">Investment Management</h2>
+          <p class="service-detail-preview">Portfolio strategy built for a short earning window and a long post-career horizon.</p>
+          <details class="service-detail-more">
+            <summary>View full scope</summary>
+            <div class="service-detail-more-content">
+              <p class="service-detail-desc">Your earning window may be short, but your investment horizon extends decades beyond the final whistle. We build diversified portfolios grounded in disciplined, research-driven analysis — identifying opportunities where the market has mispriced value and positioning your capital for long-term, sustainable growth.</p>
+              <ul class="service-detail-list">
+                <li>Customized portfolio construction based on your career timeline and risk profile</li>
+                <li>Value-oriented approach focused on long-term wealth creation</li>
+                <li>Access to alternative investments including private equity and real estate</li>
+                <li>Regular portfolio reviews aligned to your season and career milestones</li>
+              </ul>
+            </div>
+          </details>
         </article>
 
         <!-- Service 2: Multi-State Tax Planning -->
         <article class="service-detail" id="tax-planning">
-          <div class="service-detail-content">
-            <div class="service-detail-number">02</div>
-            <h2 class="service-detail-title">Multi-State Tax Planning</h2>
-            <p class="service-detail-desc">Professional athletes face one of the most complex tax situations of any profession. You may owe income tax in every state — and sometimes city — where you play, practice, or earn endorsement income. The "jock tax" is real, and without proactive planning, it can silently erode your wealth.</p>
-            <ul class="service-detail-list">
-              <li>Comprehensive multi-state and multi-jurisdiction tax strategy</li>
-              <li>Proactive tax projection and estimated payment scheduling</li>
-              <li>Coordination with CPAs to maximize deductions and credits</li>
-              <li>Residency planning to optimize your overall tax position</li>
-              <li>Endorsement and NIL income tax structuring</li>
-            </ul>
-          </div>
+          <div class="service-detail-number">02</div>
+          <h2 class="service-detail-title">Multi-State Tax Planning</h2>
+          <p class="service-detail-preview">Proactive planning for jock tax exposure, state filings, and endorsement income.</p>
+          <details class="service-detail-more">
+            <summary>View full scope</summary>
+            <div class="service-detail-more-content">
+              <p class="service-detail-desc">Professional athletes face one of the most complex tax situations of any profession. You may owe income tax in every state — and sometimes city — where you play, practice, or earn endorsement income. The "jock tax" is real, and without proactive planning, it can silently erode your wealth.</p>
+              <ul class="service-detail-list">
+                <li>Comprehensive multi-state and multi-jurisdiction tax strategy</li>
+                <li>Proactive tax projection and estimated payment scheduling</li>
+                <li>Coordination with CPAs to maximize deductions and credits</li>
+                <li>Residency planning to optimize your overall tax position</li>
+                <li>Endorsement and NIL income tax structuring</li>
+              </ul>
+            </div>
+          </details>
         </article>
 
         <!-- Service 3: Estate & Trust Planning -->
         <article class="service-detail" id="estate-planning">
-          <div class="service-detail-content">
-            <div class="service-detail-number">03</div>
-            <h2 class="service-detail-title">Estate &amp; Trust Planning</h2>
-            <p class="service-detail-desc">Generational wealth doesn't happen by accident. It requires intentional structures — trusts, wills, beneficiary designations, and governance frameworks — that protect what you've built and ensure it passes to the people and causes you care about most.</p>
-            <ul class="service-detail-list">
-              <li>Revocable and irrevocable trust design and implementation</li>
-              <li>Will preparation and beneficiary coordination</li>
-              <li>Family governance structures for multi-generational wealth</li>
-              <li>Charitable trust and foundation planning</li>
-              <li>Coordination with estate attorneys and tax professionals</li>
-            </ul>
-          </div>
+          <div class="service-detail-number">03</div>
+          <h2 class="service-detail-title">Estate &amp; Trust Planning</h2>
+          <p class="service-detail-preview">Structures that protect wealth today and transfer it intentionally over generations.</p>
+          <details class="service-detail-more">
+            <summary>View full scope</summary>
+            <div class="service-detail-more-content">
+              <p class="service-detail-desc">Generational wealth doesn't happen by accident. It requires intentional structures — trusts, wills, beneficiary designations, and governance frameworks — that protect what you've built and ensure it passes to the people and causes you care about most.</p>
+              <ul class="service-detail-list">
+                <li>Revocable and irrevocable trust design and implementation</li>
+                <li>Will preparation and beneficiary coordination</li>
+                <li>Family governance structures for multi-generational wealth</li>
+                <li>Charitable trust and foundation planning</li>
+                <li>Coordination with estate attorneys and tax professionals</li>
+              </ul>
+            </div>
+          </details>
         </article>
 
         <!-- Service 4: Risk Management & Insurance -->
         <article class="service-detail" id="risk-management">
-          <div class="service-detail-content">
-            <div class="service-detail-number">04</div>
-            <h2 class="service-detail-title">Risk Management &amp; Insurance</h2>
-            <p class="service-detail-desc">One injury can change everything. Athletes carry a level of physical and financial risk that few other professions share. We help you build a protection framework that covers the what-ifs — so your family and your future aren't riding on a single play.</p>
-            <ul class="service-detail-list">
-              <li>Disability insurance and loss-of-value coverage analysis</li>
-              <li>Life insurance planning tailored to high-income, short-career profiles</li>
-              <li>Liability protection and umbrella policy structuring</li>
-              <li>Asset protection strategies for high-profile individuals</li>
-              <li>Insurance policy audit and optimization</li>
-            </ul>
-          </div>
+          <div class="service-detail-number">04</div>
+          <h2 class="service-detail-title">Risk Management &amp; Insurance</h2>
+          <p class="service-detail-preview">Protection planning for injury risk, liability exposure, and family continuity.</p>
+          <details class="service-detail-more">
+            <summary>View full scope</summary>
+            <div class="service-detail-more-content">
+              <p class="service-detail-desc">One injury can change everything. Athletes carry a level of physical and financial risk that few other professions share. We help you build a protection framework that covers the what-ifs — so your family and your future aren't riding on a single play.</p>
+              <ul class="service-detail-list">
+                <li>Disability insurance and loss-of-value coverage analysis</li>
+                <li>Life insurance planning tailored to high-income, short-career profiles</li>
+                <li>Liability protection and umbrella policy structuring</li>
+                <li>Asset protection strategies for high-profile individuals</li>
+                <li>Insurance policy audit and optimization</li>
+              </ul>
+            </div>
+          </details>
         </article>
 
         <!-- Service 5: Contract & Deal Analysis -->
         <article class="service-detail" id="contract-analysis">
-          <div class="service-detail-content">
-            <div class="service-detail-number">05</div>
-            <h2 class="service-detail-title">Contract &amp; Deal Analysis</h2>
-            <p class="service-detail-desc">Not every deal is a good deal. Whether it's your first professional contract, an endorsement opportunity, or an equity stake in a startup, the financial terms matter as much as the headline number. We analyze the details so you sign with confidence.</p>
-            <ul class="service-detail-list">
-              <li>Financial term analysis for player contracts and extensions</li>
-              <li>Endorsement deal evaluation including equity compensation review</li>
-              <li>NIL contract assessment for college athletes</li>
-              <li>Business venture and investment opportunity due diligence</li>
-              <li>Signing bonus structuring and cash flow planning</li>
-            </ul>
-          </div>
+          <div class="service-detail-number">05</div>
+          <h2 class="service-detail-title">Contract &amp; Deal Analysis</h2>
+          <p class="service-detail-preview">Financial review of contracts, endorsements, and equity-style compensation terms.</p>
+          <details class="service-detail-more">
+            <summary>View full scope</summary>
+            <div class="service-detail-more-content">
+              <p class="service-detail-desc">Not every deal is a good deal. Whether it's your first professional contract, an endorsement opportunity, or an equity stake in a startup, the financial terms matter as much as the headline number. We analyze the details so you sign with confidence.</p>
+              <ul class="service-detail-list">
+                <li>Financial term analysis for player contracts and extensions</li>
+                <li>Endorsement deal evaluation including equity compensation review</li>
+                <li>NIL contract assessment for college athletes</li>
+                <li>Business venture and investment opportunity due diligence</li>
+                <li>Signing bonus structuring and cash flow planning</li>
+              </ul>
+            </div>
+          </details>
         </article>
 
         <!-- Service 6: Retirement & Career Transition -->
         <article class="service-detail" id="career-transition">
-          <div class="service-detail-content">
-            <div class="service-detail-number">06</div>
-            <h2 class="service-detail-title">Retirement &amp; Career Transition</h2>
-            <p class="service-detail-desc">The transition out of professional sports is one of the most significant financial and personal shifts you'll ever experience. Average career lengths range from just 3 to 6 years depending on the sport — meaning you could retire in your early 30s with decades of life ahead. We start planning years before your final game.</p>
-            <ul class="service-detail-list">
-              <li>Retirement income modeling and sustainable withdrawal strategies</li>
-              <li>League pension and benefit optimization</li>
-              <li>Post-career business and entrepreneurship evaluation</li>
-              <li>Lifestyle adjustment planning and cash flow restructuring</li>
-              <li>Second-career support including broadcasting, coaching, and venture roles</li>
-            </ul>
-          </div>
+          <div class="service-detail-number">06</div>
+          <h2 class="service-detail-title">Retirement &amp; Career Transition</h2>
+          <p class="service-detail-preview">Planning for financial stability and purpose through the transition after active play.</p>
+          <details class="service-detail-more">
+            <summary>View full scope</summary>
+            <div class="service-detail-more-content">
+              <p class="service-detail-desc">The transition out of professional sports is one of the most significant financial and personal shifts you'll ever experience. Average career lengths range from just 3 to 6 years depending on the sport — meaning you could retire in your early 30s with decades of life ahead. We start planning years before your final game.</p>
+              <ul class="service-detail-list">
+                <li>Retirement income modeling and sustainable withdrawal strategies</li>
+                <li>League pension and benefit optimization</li>
+                <li>Post-career business and entrepreneurship evaluation</li>
+                <li>Lifestyle adjustment planning and cash flow restructuring</li>
+                <li>Second-career support including broadcasting, coaching, and venture roles</li>
+              </ul>
+            </div>
+          </details>
         </article>
 
         <!-- Service 7: Philanthropy & Giving -->
         <article class="service-detail" id="philanthropy">
-          <div class="service-detail-content">
-            <div class="service-detail-number">07</div>
-            <h2 class="service-detail-title">Philanthropy &amp; Charitable Strategy</h2>
-            <p class="service-detail-desc">Many athletes want to give back — to their communities, their schools, their causes. But unstructured giving can be inefficient and unsustainable. We help you design a philanthropic strategy that maximizes impact while providing meaningful tax benefits.</p>
-            <ul class="service-detail-list">
-              <li>Charitable foundation setup and management guidance</li>
-              <li>Donor-advised fund strategy and implementation</li>
-              <li>Tax-efficient giving strategies tied to your income peaks</li>
-              <li>Cause identification and philanthropic mission development</li>
-              <li>Partnership with community organizations and nonprofits</li>
-            </ul>
-          </div>
+          <div class="service-detail-number">07</div>
+          <h2 class="service-detail-title">Philanthropy &amp; Charitable Strategy</h2>
+          <p class="service-detail-preview">A structured giving strategy designed for meaningful impact and long-term sustainability.</p>
+          <details class="service-detail-more">
+            <summary>View full scope</summary>
+            <div class="service-detail-more-content">
+              <p class="service-detail-desc">Many athletes want to give back — to their communities, their schools, their causes. But unstructured giving can be inefficient and unsustainable. We help you design a philanthropic strategy that maximizes impact while providing meaningful tax benefits.</p>
+              <ul class="service-detail-list">
+                <li>Charitable foundation setup and management guidance</li>
+                <li>Donor-advised fund strategy and implementation</li>
+                <li>Tax-efficient giving strategies tied to your income peaks</li>
+                <li>Cause identification and philanthropic mission development</li>
+                <li>Partnership with community organizations and nonprofits</li>
+              </ul>
+            </div>
+          </details>
         </article>
 
         <!-- Service 8: Financial Education -->
         <article class="service-detail" id="financial-education">
-          <div class="service-detail-content">
-            <div class="service-detail-number">08</div>
-            <h2 class="service-detail-title">Financial Literacy &amp; Education</h2>
-            <p class="service-detail-desc">Knowledge is the ultimate edge. Too many athletes enter the professional world without the financial literacy to match their talent. We believe in empowering you to understand every decision — not just trust that someone else is handling it.</p>
-            <ul class="service-detail-list">
-              <li>One-on-one financial literacy coaching sessions</li>
-              <li>Budgeting and cash flow management fundamentals</li>
-              <li>Understanding investment statements and performance reports</li>
-              <li>Red flag awareness: how to identify financial exploitation</li>
-              <li>Resources for family members and support networks</li>
-            </ul>
-          </div>
+          <div class="service-detail-number">08</div>
+          <h2 class="service-detail-title">Financial Literacy &amp; Education</h2>
+          <p class="service-detail-preview">Education-first guidance so you can evaluate decisions with clarity and confidence.</p>
+          <details class="service-detail-more">
+            <summary>View full scope</summary>
+            <div class="service-detail-more-content">
+              <p class="service-detail-desc">Knowledge is the ultimate edge. Too many athletes enter the professional world without the financial literacy to match their talent. We believe in empowering you to understand every decision — not just trust that someone else is handling it.</p>
+              <ul class="service-detail-list">
+                <li>One-on-one financial literacy coaching sessions</li>
+                <li>Budgeting and cash flow management fundamentals</li>
+                <li>Understanding investment statements and performance reports</li>
+                <li>Red flag awareness: how to identify financial exploitation</li>
+                <li>Resources for family members and support networks</li>
+              </ul>
+            </div>
+          </details>
         </article>
       </div>
     </div>
@@ -252,6 +285,7 @@
               <li><a href="approach.html#investment-philosophy">How We Invest</a></li>
               <li><a href="services.html#career-transition">Career Transition</a></li>
               <li><a href="services.html#financial-education">Financial Literacy</a></li>
+              <li><a href="athlete-education.html">Athlete Education</a></li>
               <li><a href="faq.html">Common Questions</a></li>
               <li><a href="contact.html">Schedule a Call</a></li>
             </ul>
